--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ license = "MIT"
 #lto = "fat"
 #codegen-units = 1
 #[[bin]]
-#name = "performance_test"
-#path = "tests/performance_test.rs"
+#name = "main"
+#path = "src/main.rs"
 # end for performance
 
 [lib]
@@ -56,9 +56,7 @@ path = "tests/performance_test.rs"
 libc = "0.2.126"
 image = { version = "0.24.3", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
-#pixel_caster = { path = "../pixel_caster", default-features = false  } default-features = false to not use the pixels_string feature (and its relative dependencies/optional features, like the "image" crate)
-#eager = { version = "0.1.0", optional = true }
-#paste = { version = "1.0.8", optional = true }
+#pixel_caster = { path = "../pixel_caster", default-features = false  } default-features = false : to not use the pixels_string feature (and its relative dependencies/optional features, like the "image" crate)
 
 [dev-dependencies]
 eager = "0.1.0"
