--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ path = "tests/performance_test.rs"
 libc = "0.2.126"
 image = { version = "0.24.3", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
-#pixel_caster = { path = "../pixel_caster", default-features = false  } default-features = false : to not use the pixels_string feature (and its relative dependencies/optional features, like the "image" crate)
+#pixel_caster = { path = "../pixel_caster", default-features = false  } default-features = false : to not use the pixels_string feature (and its relative dependencies/optional features, like the "image" crate). path instead of version to load the locally store crate
 
 [dev-dependencies]
 eager = "0.1.0"
@@ -65,7 +65,7 @@ paste = "1.0.8"
 
 [features]
 default = ["pixels_string"]
-# Defines a feature named `pixels_string` that does not enable any other features, but enables the optional dependency "image" crate.
+# Defines a feature named `pixels_string` that does not enable any other features, but enables the optional dependencies "image" and "lazy_static" crates. Enables the feature by setting it as default
 pixels_string = ["dep:image", "dep:lazy_static"]
 
 
