--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,9 @@ image = { version = "0.25.1", optional = true }
 lazy_static = { version = "1.4.0", optional = true }
 #pixel_caster = { path = "../pixel_caster", default-features = false  } default-features = false : to not use the pixels_string feature (and its relative dependencies/optional features, like the "image" crate). path instead of version to load the locally store crate
 
+serde = { version = "1.0", features = ["derive"] }
+
+
 [dev-dependencies]
 eager = "0.1.0"
 paste = "1.0.15"
